infrastructure/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curs-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curs-flask
  template:
    metadata:
      labels:
        app: curs-flask
    spec:
      containers:
      - name: curs-flask
        image: trojanul2008/curs-flask:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
