infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: curs-flask
  namespace: default
spec:
  type: ClusterIP   # Important! Nu folosi LoadBalancer
  selector:
    app: curs-flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
