infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: curs-flask-ingress
  namespace: default
  annotations:
    # Specifica ca foloseste Traefik ca IngressClass
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: exchange.istartit.com    # Schimba cu DNS-ul sau IP-ul tau
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: curs-flask
                port:
                  number: 80
  # Dacă vrei TLS (opţional), poţi adăuga ceva de genul:
  # tls:
  #   - hosts:
  #       - flask.local
  #     secretName: flask-tls-secret
